--- a/ac/source/enet/.deps/protocol.Po
+++ b/ac/source/enet/.deps/protocol.Po
@@ -1,11 +1,12 @@
 protocol.o protocol.o: protocol.c /usr/include/stdio.h \
   /usr/include/features.h /usr/include/sys/cdefs.h \
   /usr/include/gnu/stubs.h \
-  /usr/lib/gcc-lib/i486-linux/3.3.5/include/stddef.h \
+  /usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/stddef.h \
   /usr/include/bits/types.h /usr/include/bits/wordsize.h \
   /usr/include/bits/typesizes.h /usr/include/libio.h \
   /usr/include/_G_config.h /usr/include/wchar.h /usr/include/bits/wchar.h \
-  /usr/include/gconv.h /usr/lib/gcc-lib/i486-linux/3.3.5/include/stdarg.h \
+  /usr/include/gconv.h \
+  /usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/stdarg.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
   /usr/include/bits/stdio.h /usr/include/string.h \
   /usr/include/bits/string.h /usr/include/bits/string2.h \
@@ -20,8 +21,8 @@ protocol.o protocol.o: protocol.c /usr/include/stdio.h \
   include/enet/unix.h /usr/include/netinet/in.h /usr/include/stdint.h \
   /usr/include/sys/socket.h /usr/include/sys/uio.h \
   /usr/include/bits/uio.h /usr/include/bits/socket.h \
-  /usr/lib/gcc-lib/i486-linux/3.3.5/include/limits.h \
-  /usr/lib/gcc-lib/i486-linux/3.3.5/include/syslimits.h \
+  /usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/limits.h \
+  /usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/syslimits.h \
   /usr/include/limits.h /usr/include/bits/posix1_lim.h \
   /usr/include/bits/local_lim.h /usr/include/linux/limits.h \
   /usr/include/bits/posix2_lim.h /usr/include/bits/sockaddr.h \
@@ -36,7 +37,7 @@ protocol.o protocol.o: protocol.c /usr/include/stdio.h \
 
 /usr/include/gnu/stubs.h:
 
-/usr/lib/gcc-lib/i486-linux/3.3.5/include/stddef.h:
+/usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/stddef.h:
 
 /usr/include/bits/types.h:
 
@@ -54,7 +55,7 @@ protocol.o protocol.o: protocol.c /usr/include/stdio.h \
 
 /usr/include/gconv.h:
 
-/usr/lib/gcc-lib/i486-linux/3.3.5/include/stdarg.h:
+/usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/stdarg.h:
 
 /usr/include/bits/stdio_lim.h:
 
@@ -122,9 +123,9 @@ include/enet/unix.h:
 
 /usr/include/bits/socket.h:
 
-/usr/lib/gcc-lib/i486-linux/3.3.5/include/limits.h:
+/usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/limits.h:
 
-/usr/lib/gcc-lib/i486-linux/3.3.5/include/syslimits.h:
+/usr/lib/gcc-lib/i486-linux-gnu/3.3.6/include/syslimits.h:
 
 /usr/include/limits.h:
 
