New page in readme for special moves, such as strafe running.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1691 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -18,7 +18,7 @@ NEW STUFF!
 * Enhanced scoreboard asthetics and features.
 * Crouching + sounds.
 * Voice-coms.
-* Keybinding using a GUI/mouse invert.
+* Keybinding using a GUI. Mouse invert support.
 * Welcome menu that asks for fundamental options to be changed.
 
 
@@ -37,6 +37,7 @@ Feature changes:
 * 2 new soundtracks.
 * Scorch marks made by grenades.
 * Stable demo support.
+* New sniper scope by Antiklimax.
 
 
 Small Changes:
