--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -39,6 +39,7 @@ Feature changes:
 * Stable demo support.
 * New sniper scope by Antiklimax.
 * Markers on the HUD indicate the direction where damage was inflicted from.
+* Crosshairs menu automatically loads all crosshairs in the crosshairs folder.
 
 
 Small Changes:
