Changelog update. Rly tiny map fixes. Slight change to bot editing menu. New linux bins.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1751 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -22,6 +22,7 @@ NEW STUFF!
 * Welcome menu that asks for fundamental options to be changed.
 * Customizable ports allowed for servers.
 * New netcode with various new features and changes.
+* Muzzle flashes.
 
 
 Feature changes:
