Changelog/Linux bins
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1779 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -24,6 +24,9 @@ NEW STUFF!
 * Customizable ports allowed for servers.
 * New netcode with various new features and changes.
 * Muzzle flashes.
+* OpenAL support (Allows for 5.1 surround sound).
+* Bullet ricochet sounds.
+* Brand new mapmodels made by Toca.
 
 
 Feature changes:
