Grenade jump documentation.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1854 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -83,4 +83,5 @@ Bugs (from 0.93) fixes:
 * Fixed reloading while scoping issue.
 * "hideradar 0" doesn't disable the minimap anymore.
 * Scope is always drawn at correct aspect ratio now.
+* CTF flag now drops correctly on heightfields.
 
