Updated interface docs to include info about ratio.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1855 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -16,7 +16,7 @@ NEW STUFF!
 * Visibility options for player models -> Implemented as coloured vests.
 * New voting system.
 * You can hear "footsteps".
-* Enhanced scoreboard asthetics and features.
+* Enhanced scoreboard asthetics and features, including the new "ratio" column.
 * Crouching + sounds.
 * Voice-coms.
 * Keybinding using a GUI. Mouse invert support.
