--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -1,4 +1,4 @@
-Add things that have changed since 0.93 in here, so that when release time comes around, it is much easier to 
+   Add things that have changed since 0.93 in here, so that when release time comes around, it is much easier to 
 record what has changed since it's already recorded here. 
 
 Things not to add: 	Bugs created in 0.94 (since they should get fixed during the development).
@@ -57,7 +57,7 @@ Feature changes:
 * Menu sounds.
 * Bullet ricochet sounds.
 * Sound scheduler, during heavy bursts sounds are played using a priority scheme.
-* "/modeacronyms 1" will now show modes in the scoreboard as acronyms, if toggled.
+* "/modeacronyms 1" will now show modes in the server list as acronyms, if toggled.
 
 
 Small Changes:
