ac_snow just got 1337!... made ac_urban _a little_ brighter.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1925 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -12,6 +12,7 @@ NEW STUFF!
 * New map: ac_elevation.
 * New map: ac_toxic.
 * New map: ac_urban.
+* Map: ac_snow just got 1337...
 * Spectator mode, with 2 following modes.
 * Visibility options for player models -> Implemented as coloured vests.
 * New voting system.
