--- a/ac/source/ChangeLog.txt
+++ b/ac/source/ChangeLog.txt
@@ -12,9 +12,11 @@ NEW STUFF!
 * New map: ac_elevation.
 * New map: ac_toxic.
 * New map: ac_urban.
-* New map: ac_shine (plus texture for it).
+* New map: ac_shine.
 * New map: ac_desert3.
 * New map: ac_keller.
+* New map: ac_sunset
+* New map: ac_arctic.
 * Map: ac_snow got updated with a brand new look.
 * Map: ac_depot had its pickups changed around a bit.
 * Spectator mode, with 2 following modes.
@@ -29,7 +31,7 @@ NEW STUFF!
 * Customizable ports allowed for servers.
 * New netcode with various new features and changes.
 * Muzzle flashes.
-* OpenAL support (Allows for 5.1 surround sound).
+* OpenAL (or OpenAL-soft) support (Allows for 5.1 surround sound).
 * Brand new mapmodels made by Toca.
 * Lots of brand new settings in the reworked "settings" menu, including Sound, Video and HUD settings.
 * You can "giveadmin" instead of givemaster, since master is now gone.
@@ -74,6 +76,8 @@ NEW STUFF!
 * Reset all settings command.
 * HUDgun, etc doesn't appear while in editmode.
 * Music plays when you have the CTF flag to make you feel like a total badass!
+* Multi-user support for Windows/Linux (stores your configurations/files 
+  to your Windows/Linux user profile).
 
 
 Bugs (from 0.93) fixes:
