west is to the left *cough*
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2842 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/audio/sounds/ambience/authors.txt
+++ b/ac/packages/audio/sounds/ambience/authors.txt
@@ -6,6 +6,9 @@ cavedrip          Original recordings by "acclivity"
 water                    Original recording  by "ignotus"
 distant_cars             Original recordings  by "fresco" and "WIM"
 
+hum02                    Original recording  by "dommygee"
+hum01                    
+
 
 All these works are licensed:
 
