updated sound list
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3293 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/audio/sounds/ambience/authors.txt
+++ b/ac/packages/audio/sounds/ambience/authors.txt
@@ -49,6 +49,10 @@ t_night02
 t_water_owl
 t_night01
 t_night_dog
+t_keyboard.ogg
+t_factory01.ogg
+t_vents.ogg
+t_waterfront.ogg
 
 warningalarm01
 
